Completed Webhook Implementation

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,9 @@ temp/
 
 # rules
 .qoder
+files
+PROJECT_STATUS_SUMMARY.md
+NEXT_STEPS.md
+IMPLEMENTATION_SUMMARY.md
+WEBHOOK_IMPLEMENTATION_SUMMARY.md
+FINAL_STATUS_REPORT.md
