Initial Setup for Dashboard design

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,5 @@ NEXT_STEPS.md
 IMPLEMENTATION_SUMMARY.md
 WEBHOOK_IMPLEMENTATION_SUMMARY.md
 FINAL_STATUS_REPORT.md
+PHASE3_SUMMARY.md
+PHASE3_IMPLEMENTATION.md
