Improved UI for Dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,6 @@ WEBHOOK_IMPLEMENTATION_SUMMARY.md
 FINAL_STATUS_REPORT.md
 PHASE3_SUMMARY.md
 PHASE3_IMPLEMENTATION.md
+GEMINI.md
+.images
+.gemini
