--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stacks/network": "^7.2.0",
+    "@stacks/transactions": "^7.2.0",
     "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
