Contract Deployed on Testnet

--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "@stacks/wallet-sdk": "^7.2.0"
+    "@stacks/common": "^7.0.2",
+    "@stacks/network": "^7.2.0",
+    "@stacks/transactions": "^7.2.0",
+    "@stacks/wallet-sdk": "^7.2.0",
+    "axios": "^1.11.0",
+    "pg": "^8.16.3"
   }
 }
