--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stacks/blockchain-api-client": "^8.12.1",
     "@stacks/network": "^7.2.0",
     "@stacks/transactions": "^7.2.0",
     "axios": "^1.11.0",
